@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java
-  Copyright (C) 1995-2021 Andreas Maschke
+  Copyright (C) 1995-2023 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser
   General Public License as published by the Free Software Foundation; either version 2.1 of the
@@ -260,6 +260,50 @@ public class RessourceDialog extends JDialog {
     if (editorTextArea == null) {
       editorTextArea = new JEditorPane();
       editorTextArea.setText("");
+
+      final JPopupMenu contextMenu = new JPopupMenu("Edit");
+      {
+        JMenuItem item = new JMenuItem("Select all");
+        item.addActionListener(new ActionListener() {
+          @Override
+          public void actionPerformed(ActionEvent e) {
+            editorTextArea.setSelectionStart(0);
+            editorTextArea.setSelectionEnd(editorTextArea.getText().length());
+          }
+        });
+        contextMenu.add(item);
+      }
+      {
+        JMenuItem item = new JMenuItem("Cut");
+        item.addActionListener(new ActionListener() {
+          @Override
+          public void actionPerformed(ActionEvent e) {
+            editorTextArea.cut();
+          }
+        });
+        contextMenu.add(item);
+      }
+      {
+        JMenuItem item = new JMenuItem("Copy");
+        item.addActionListener(new ActionListener() {
+          @Override
+          public void actionPerformed(ActionEvent e) {
+            editorTextArea.copy();
+          }
+        });
+        contextMenu.add(item);
+      }
+      {
+        JMenuItem item = new JMenuItem("Paste");
+        item.addActionListener(new ActionListener() {
+          @Override
+          public void actionPerformed(ActionEvent e) {
+            editorTextArea.paste();
+          }
+        });
+        contextMenu.add(item);
+      }
+      editorTextArea.setComponentPopupMenu(contextMenu);
     }
     return editorTextArea;
   }
