@@ -4,6 +4,7 @@ V8.xx (xx.xx.2023)
  -fixed a bug in the math library which causes some variations to fail which used trigonometric functions with large
   arguments (e.g. "phoenix_julia")
  -added a check for path-settings which contain space-characters and display a warning in this case
+ -added a context-menu to the resources-dialog for editing text (copy, cut, paste)
  -removed the parameters "X" and "Y" of "circleLinear" which were never used
 
 V8.00 (19.02.2023)
